# py-xsettings

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  setup.cfg  versions.json
1.0.0/: 404.html  index.html
1.0.0/api/xinject/: dependency.html
1.0.0/changelog/: index.html
1.0.0/search/: search_index.json
1.1.1/: index.html
1.1.1/api/xinject/: index.html
1.1.1/api/xsettings/: default_converters.html  fields.html  settings.html
1.1.1/changelog/: index.html
1.1.1/search/: search_index.json
1.1.2/: index.html
1.1.2/changelog/: index.html
1.1.2/search/: search_index.json
1.2.0/: 404.html  index.html
1.2.0/api/xsentinels/: singleton.html
1.2.0/api/xsettings/: index.html  settings.html
1.2.0/changelog/: index.html
1.2.0/search/: search_index.json
1.2.1/: sitemap.xml
1.2.1/api/xinject/: context.html
1.2.1/api/xsentinels/: singleton.html
1.2.1/api/xsettings/: env_settings.html
1.2.1/changelog/: index.html
1.2.1/search/: search_index.json
1.3.0/: index.html  sitemap.xml
1.3.0/api/xinject/: pytest_plugin.html
1.3.0/api/xsettings/: env_settings.html  errors.html  index.html
1.3.0/changelog/: index.html
1.3.0/search/: search_index.json
1.3.1/: index.html
1.3.1/api/xsettings/: fields.html
1.3.1/changelog/: index.html
1.3.1/search/: search_index.json
1.4.0/: 404.html  index.html
1.4.0/api/xinject/: dependency.html
1.4.0/api/xsettings/: retreivers.html
1.4.0/changelog/: index.html
1.4.0/search/: search_index.json
docs/: index.md
latest/changelog/: index.html
tests/: test_examples.py  test_fields.py  test_settings.py
xsettings/: __init__.py  default_converters.py  env_settings.py  errors.py  fields.py  retreivers.py  settings.py
(+12 files in other folders)
